--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">Gamecenter</string>
+    <string name="app_name">Home</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_produtos">ProdutosActivity</string>
+    <string name="action_home">Home</string>
+    <string name="action_produtos">Produtos</string>
+    <string name="action_rankingVendedores">Ranking de Vendedores</string>
+    <string name="title_activity_produtos">Produtos</string>
 </resources>
