--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
-    <string name="app_name">Home</string>
+    <string name="app_name">Gamecenter</string>
     <string name="action_settings">Settings</string>
     <string name="action_home">Home</string>
+    <string name="action_news">Notícias</string>
     <string name="action_produtos">Produtos</string>
     <string name="action_rankingVendedores">Ranking de Vendedores</string>
+    <string name="title_activity_main">Home</string>
     <string name="title_activity_produtos">Produtos</string>
+    <string name="title_activity_ranking_vendedores">Ranking de Vendedores</string>
+    <string name="title_activity_vendedor">VendedorActivity</string>
+    <string name="title_activity_news">Notícias</string>
 </resources>
