--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_activity_ranking_vendedores">Ranking de Vendedores</string>
     <string name="title_activity_vendedor">VendedorActivity</string>
     <string name="title_activity_news">Notícias</string>
+    <string name="title_activity_produto">ProdutoActivity</string>
 </resources>
