--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="title_activity_usuario">Usuário</string>
     <string name="title_activity_produto_post">Produto</string>
     <string name="title_activity_usuarios">Usuários</string>
+    <string name="title_activity_cominudades">Comunidades</string>
+    <string name="title_activity_comunidades">Comunidades</string>
 </resources>
