--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,12 @@
     <string name="title_activity_usuarios">Usuários</string>
     <string name="title_activity_cominudades">Comunidades</string>
     <string name="title_activity_comunidades">Comunidades</string>
+    <string name="title_activity_comunidade_post">Criar Comunidade</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_vendedor2">Vendedor2Activity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="title_activity_comunidade">Comunidade</string>
 </resources>
